hphp/test/zend/bad/zend/bug41813.php
<?php

$foo = "50";
$foo[0]->bar = "xyz";

echo "Done\n";
?>